contact me text

--- a/index.html
+++ b/index.html
@@ -220,10 +220,13 @@
               <h2>Get in touch</h2>
             </header>
             <p>
-              Sed varius enim lorem ullamcorper dolore aliquam aenean ornare
-              velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed
-              aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-              tempus aliquam.
+              I'd love to hear from you! Feel free to shoot me an email or
+              connect with me on
+              <a
+                href="https://www.linkedin.com/in/max-henderson-react-developer/"
+                target="_blank"
+                >LinkedIn</a
+              >.
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">
