data security 101 added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
             <div class="posts">
               <article>
                 <a href="#" class="image"
-                  ><img src="images/recipe-app-thumbnail.png" alt=""
+                  ><img
+                    src="images/recipe-app-thumbnail.png"
+                    alt="recipe app thumbnail"
                 /></a>
                 <h3>Recipe Search App</h3>
                 <p>A web app built with React.js and Axios.</p>
@@ -112,7 +114,9 @@
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/stock-tracker-thumbnail.png" alt=""
+                  ><img
+                    src="images/stock-tracker-thumbnail.png"
+                    alt="stock tracker thumbnail"
                 /></a>
                 <h3>Stock Tracker App</h3>
                 <p>A stock tracker web app built with React.js.</p>
@@ -128,6 +132,36 @@
                   <li>
                     <a
                       href="https://github.com/Maxwellcoyle-dev/react-stock-tracker-app"
+                      target="_blank"
+                      class="button"
+                      >Git Hub</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img
+                    src="images/data-security-101-thumbnail.png"
+                    alt="data security 101 thumbnail"
+                /></a>
+                <h3>Data Security 101</h3>
+                <p>
+                  A learning experience built with HTML, CSS, JavaScript, and
+                  xAPI.
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      href="https://maxwellcoyle-dev.github.io/data-security-101/index"
+                      target="_blank"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://github.com/Maxwellcoyle-dev/data-security-101"
                       target="_blank"
                       class="button"
                       >Git Hub</a
