--- a/index.html
+++ b/index.html
@@ -142,6 +142,37 @@
               <article>
                 <a href="#" class="image"
                   ><img
+                    src="images/music-app-thumbnail.png"
+                    alt="data security 101 thumbnail"
+                /></a>
+                <h3>Maxes Music App</h3>
+                <p>
+                  A Spotify clone web-app based on a JavaScript Mastery
+                  tutorial. The project is built in React and uses Redux
+                  Toolkit, Tailwind CSS, Axios, Vite, and React Icons.
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      href="https://music-app-clone-max-henderson.netlify.app/"
+                      target="_blank"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://github.com/Maxwellcoyle-dev/maxes-music-app"
+                      target="_blank"
+                      class="button"
+                      >Git Hub</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img
                     src="images/data-security-101-thumbnail.png"
                     alt="data security 101 thumbnail"
                 /></a>
