--- a/index.html
+++ b/index.html
@@ -51,17 +51,16 @@
             <div class="content">
               <header>
                 <h1>Hi, I’m Max Henderson</h1>
-                <p>A Front-End Developer Specializing in React.js</p>
+                <p>Technical Deployment Manager & DevOps Innovator</p>
               </header>
               <p>
-                I'm a self-taught front-end developer, hungry to continue
-                growing my technical knowledge and skillset. I strive to be a
-                team player and am focused on developing innovative front-end
-                solutions that improve & simplify user experiences. Over the
-                last 3+ years of Technical Instructional Design Consultant work,
-                I have successfully completed projects with high stakes clients
-                and managed countless design projects from kickoff through
-                delivery.
+                At Trainicity, a Docebo onboarding partner, I focus on three key
+                areas: leading Connect integration onboarding projects, managing
+                our IT infrastructure (including Google Workspace, Slack, Zoom,
+                Hubspot, and our Webflow website), and building custom solutions
+                with JavaScript, React, and AWS services. Explore below to see
+                how I innovate and streamline technology deployment along with
+                projects I've built along the way.
               </p>
               <ul class="actions">
                 <li>
