added hyperlinks to hero description

--- a/index.html
+++ b/index.html
@@ -54,13 +54,18 @@
                 <p>Technical Deployment Manager & DevOps Innovator</p>
               </header>
               <p>
-                At Trainicity, a Docebo onboarding partner, I focus on three key
-                areas: leading Connect integration onboarding projects, managing
-                our IT infrastructure (including Google Workspace, Slack, Zoom,
-                Hubspot, and our Webflow website), and building custom solutions
-                with JavaScript, React, and AWS services. Explore below to see
-                how I innovate and streamline technology deployment along with
-                projects I've built along the way.
+                At
+                <a hrf="https://www.trainicity.com/" target="_blank"
+                  >Trainicity</a
+                >, a
+                <a href="https://www.docebo.com/" target="_blank">Docebo</a>
+                onboarding partner, I focus on three key areas: leading Connect
+                integration onboarding projects, managing our IT infrastructure
+                (including Google Workspace, Slack, Zoom, Hubspot, and our
+                Webflow website), and building custom solutions with JavaScript,
+                React, and AWS services. Explore below to see how I innovate and
+                streamline technology deployment along with projects I've built
+                along the way.
               </p>
               <ul class="actions">
                 <li>
