added new project - slack / zoom ai automator workflow

--- a/index.html
+++ b/index.html
@@ -84,7 +84,26 @@
             </header>
             <div class="posts">
               <article>
-                <a href="#" class="image"
+                <a href="https://github.com/Maxwellcoyle-dev/meeting-analyzer-workflow" target="_blank" class="image"
+                  ><img
+                    src="images/slack-zoom-ai-automator-v1-diagram.png"
+                    alt="slack + zoom + openai - Automator v1 diagram"
+                /></a>
+                <h3>Zoom Meeting AI Automator for Slack</h3>
+                <p>A cloud based Slack + Zoom integration built on the back of AWS Lambda functions + Open AI</p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      href="https://github.com/Maxwellcoyle-dev/meeting-analyzer-workflow"
+                      target="_blank"
+                      class="button"
+                      >Git Hub</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a href="https://maxwellcoyle-dev.github.io/recipe-app/" target="_blank" class="image"
                   ><img
                     src="images/recipe-app-thumbnail.png"
                     alt="recipe app thumbnail"
@@ -111,7 +130,7 @@
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a href="https://maxwellcoyle-dev.github.io/react-stock-tracker-app/" target="_blank" class="image"
                   ><img
                     src="images/stock-tracker-thumbnail.png"
                     alt="stock tracker thumbnail"
@@ -138,7 +157,7 @@
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a href="https://github.com/Maxwellcoyle-dev/maxes-music-app" target="_blank" class="image"
                   ><img
                     src="images/music-app-thumbnail.png"
                     alt="data security 101 thumbnail"
@@ -169,7 +188,7 @@
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a href="https://maxwellcoyle-dev.github.io/data-security-101/index" class="image"
                   ><img
                     src="images/data-security-101-thumbnail.png"
                     alt="data security 101 thumbnail"
