added als cornhole challenge project

--- a/index.html
+++ b/index.html
@@ -84,6 +84,33 @@
             </header>
             <div class="posts">
               <article>
+                <a href="https://www.alscornholechallenge.com/" target="_blank" class="image"
+                  ><img
+                    src="images/als-cornhole-challenge-site.png"
+                    alt="ALS Cornhole Challenge site hero image"
+                /></a>
+                <h3>ALS Cornhole Challenge - React Web App</h3>
+                <p>The ALS Cornhole Challenge is a React web application designed to raise awareness and funds for ALS research through cornhole tournaments in the Pittsburgh area. The project showcases my full-stack development skills, utilizing a modern tech stack and AWS serverless architecture.</p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      href="https://www.alscornholechallenge.com/"
+                      target="_blank"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://github.com/Maxwellcoyle-dev/als-cornhole-challenge-site"
+                      target="_blank"
+                      class="button"
+                      >Git Hub</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
                 <a href="https://github.com/Maxwellcoyle-dev/meeting-analyzer-workflow" target="_blank" class="image"
                   ><img
                     src="images/slack-zoom-ai-automator-v1-diagram.png"
@@ -92,6 +119,7 @@
                 <h3>Zoom Meeting AI Automator for Slack</h3>
                 <p>A cloud based Slack + Zoom integration built on the back of AWS Lambda functions + Open AI</p>
                 <ul class="actions">
+
                   <li>
                     <a
                       href="https://github.com/Maxwellcoyle-dev/meeting-analyzer-workflow"
