--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="https://www.trainicity.com/" target="_blank"
                   >Trainicity</a
                 >, a
-                <a href="https://www.docebo.com/" target="_blank">Docebo</a> onboarding partner, I excel in three key areas: leading Connect integration onboarding projects, adeptly managing our IT infrastructure (including Google Workspace, Slack, Zoom, Hubspot, and our Webflow website), and crafting custom solutions using JavaScript, React, and AWS services. My role also involves extensive client relations, successfully collaborating with cross-functional teams, sales, professional services, and product support. Explore below to see how I innovate and streamline technology deployment along with a few cool projects I've built along the way.
+                <a href="https://www.docebo.com/" target="_blank">Docebo</a> onboarding partner, I excel in three key areas: leading Connect integration and onbaording projects, adeptly managing our IT infrastructure (including Google Workspace, Slack, Zoom, Hubspot, and our Webflow website), and crafting custom solutions using JavaScript, React, and AWS services. My role also involves extensive client relations, successfully collaborating with cross-functional teams, sales, professional services, and product support. Explore below to see how I innovate and streamline technology deployment along with a few cool projects I've built along the way.
               </p>
               </p>
               <ul class="actions">
