--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
                 <h1>Hi, I’m Max Henderson</h1>
                 <p>Technical Deployment Manager & DevOps Innovator</p>
               </header>
-              <p>
-                At
-                <a href="https://www.trainicity.com/" target="_blank"
-                  >Trainicity</a
-                >, a
-                <a href="https://www.docebo.com/" target="_blank">Docebo</a> onboarding partner, I excel in three key areas: leading Connect integration and onbaording projects, adeptly managing our IT infrastructure (including Google Workspace, Slack, Zoom, Hubspot, and our Webflow website), and crafting custom solutions using JavaScript, React, and AWS services. My role also involves extensive client relations, successfully collaborating with cross-functional teams, sales, professional services, and product support. Explore below to see how I innovate and streamline technology deployment along with a few cool projects I've built along the way.
-              </p>
+              <p>I'm passionate about building things. At Trainicity, I help Enterprise clients integrate their LMS with HR, CRM, and CMS platforms using JavaScript, AWS, and Workato. I love working on technical solutions that make complex processes simple and efficient. This site showcases some of the projects I’m proud of, from custom integrations to innovative tools.</p>
               </p>
               <ul class="actions">
                 <li>
