--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="content">
               <header>
                 <h1>Hi, I’m Max Henderson</h1>
-                <p>Technical Deployment Manager & DevOps Innovator</p>
+                <p>Technical Solutions & Deployment Manager by Day | Tinkerer and Builder by Night. </p>
               </header>
               <p>I'm passionate about building things. At Trainicity, I help Enterprise clients integrate their LMS with HR, CRM, and CMS platforms using JavaScript, AWS, and Workato. I love working on technical solutions that make complex processes simple and efficient. This site showcases some of the projects I’m proud of, from custom integrations to innovative tools.</p>
               </p>
